# MessageFlow

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  settings.py  startup.sh
mf_bot/: telegram_bot.py
rabbitmq/: listners.py
